--- a/pages/skills.html
+++ b/pages/skills.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../public/styles/site.css" />
 
-    <title>HOME | CAMELLIA GUAN</title>
+    <title> RESUME | CAMELLIA GUAN </title>
 </head>
 
 <body>
