Updated portfolio page with projects

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 
 <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel='stylesheet' href='./public/styles/site.css' />
+    <link rel="stylesheet" href="./public/styles/site.css" />
 
     <title> HOME | CAMELLIA GUAN </title>
 </head>
@@ -13,17 +13,17 @@
 <body>
     <nav>
 
-        <div class='nav-heading'>
+        <div class="nav-heading">
 
-            <h1><a href='./index.html'> camellia guan </a></h1>
+            <h1><a href="./index.html"> camellia guan </a></h1>
 
         </div>
 
-        <ul class='nav-pages'>
+        <ul class="nav-pages">
 
-            <li><a href='./pages/portfolio.html'> projects </a></li>
-            <li><a href='./pages/skills.html'> resume </a></li>
-            <li><a href='./pages/about.html'> about </a></li>
+            <li><a href="./pages/portfolio.html"> projects </a></li>
+            <li><a href="./pages/skills.html"> resume </a></li>
+            <li><a href="./pages/about.html"> about </a></li>
 
         </ul>
 
@@ -31,30 +31,30 @@
 
 
     <!-- Flex Box for Home Page: 1 on left, 1 on right -->
-    <div class='home-flex'>
+    <div class="home-flex">
 
         <!-- Content -->
-        <div class='home-item home-content'>
+        <div class="home-item home-content">
 
             <h2> Welcome! </h2>
 
             <p> 
-                I'm very passionate about problem-solving, and I believe that computer science provides an incredible platform for tackling complex problems and making a positive impact on society. Throughout my time at Cornell, I have had the opportunity to work on various projects and engage in clubs and classes that have further fueled my passion for problem-solving. 
+                I"m very passionate about problem-solving, and I believe that computer science provides an incredible platform for tackling complex problems and making a positive impact on society. Throughout my time at Cornell, I have had the opportunity to work on various projects and engage in clubs and classes that have further fueled my passion for problem-solving. 
 
                 <br/>
                 <br/>
 
-                Ultimately, I'd love to work in a role related to software development and engineering to create solutions to real-world problems and exercise my fundamentals in programming and problem-solving. 
+                Ultimately, I"d love to work in a role related to software development and engineering to create solutions to real-world problems and exercise my fundamentals in programming and problem-solving. 
             </p>
 
-            <a class='button' href='./pages/about.html'> More About Me </a>
+            <a class="button" href="./pages/about.html"> More About Me </a>
 
         </div>
 
         <!-- Image -->
-        <div class='home-item home-img'>
+        <div class="home-item home-img">
 
-            <img src='./public/images/home-image.png'/>
+            <img src="./public/images/home-image.png"/>
 
         </div>
 
