--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,29 @@
 
         </ul>
 
-        
-
     </nav>
+
+    <div class="about-flex">
+
+        <!-- Content -->
+        <div class="about-item about-content">
+
+            <h2> About Me! </h2>
+
+            <p> 
+                ...
+            </p>
+
+            <a class="button" href=""> Contact Information </a>
+
+        </div>
+
+        <!-- Image -->
+        <div class="about-item about-img">
+
+            <img src=""/>
+
+        </div>
+
+    </div>
 </body>
