--- a/pages/resume.html
+++ b/pages/resume.html
@@ -22,12 +22,15 @@
         <ul class="nav-pages">
 
             <li><a href="../pages/portfolio.html"> projects </a></li>
-            <li><a class="active" href="../pages/skills.html"> resume </a></li>
+            <li><a class="active" href="../pages/resume.html"> resume </a></li>
             <li><a href="../pages/about.html"> about </a></li>
 
         </ul>
 
-        
-
     </nav>
+
+    <div class="">
+        <p> skills: HTML/CSS/JS ....</p>
+
+    </div>
 </body>
