Fixed resume page name discrepancy

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,7 +22,7 @@
         <ul class="nav-pages">
 
             <li><a class="active" href="../pages/portfolio.html"> projects </a></li>
-            <li><a href="../pages/skills.html"> resume </a></li>
+            <li><a href="../pages/resume.html"> resume </a></li>
             <li><a href="../pages/about.html"> about </a></li>
 
         </ul>
