--- a/pages/resume.html
+++ b/pages/resume.html
@@ -30,7 +30,60 @@
     </nav>
 
     <div class="">
+        <h2 class="resume-header"> Technical Skills </h2>
+
         <p> skills: HTML/CSS/JS ....</p>
 
     </div>
+
+    <div class="resume-timeline">
+
+        <h2 class="resume-header"> Work Experience </h2>
+
+        <div class="resume-line">
+
+            <div class="resume-card">
+                <div class="resume-workinfo">
+                    <h3 class="resume-title"> CS1110 Consultant &#183; Cornell CIS </h3>
+                    <p> August 2022 - Present </p>
+                    <p>
+                        I serve on a team of 60+ consultants to supplement learning for ~500 students. During consulting and office hours, I troubleshoot students' computer and Python issues, and I also teach students during bi-weekly lab sections to ensure students are on track with lecture material. Another responsibility I have is grading assignments and exams and answering course forum questions on Ed Discussion.
+                    </p>
+                </div>
+            </div>
+
+            <div class="resume-card">
+                <div class="resume-workinfo">
+                    <h3 class="resume-title"> Teaching Assistant &#183; Art of Problem Solving </h3>
+                    <p> August 2021 - Present </p>
+                    <p>
+                        I supplement student learning experiences by answering student questions and providing feedback in real-time about the Python programming language. I also provide personalized feedback and guidance to students in regard to their Python code.
+                    </p>
+                </div>
+            </div>
+
+            <div class="resume-card">
+                <div class="resume-workinfo">
+                    <h3 class="resume-title"> Resident Advisor &#183; Cornell HRL </h3>
+                    <p> August 2021 - May 2022 </p>
+                    <p>
+                        I was a Resident Advisor at Ganędagǫ: Hall, the newly-built first year community. Responsibilities include fostering a residential community, being a support system and mentor for residents, and enforcing house rules and policies. As a Resident Advisor, I also have problem-solving, conflict management, and team-building skills that are beneficial in a group setting.
+                    </p>
+                </div>
+            </div>
+
+            <div class="resume-card">
+                <div class="resume-workinfo">
+                    <h3 class="resume-title"> Teaching Assistant &#183; Girls Who Code </h3>
+                    <p> July 2021 - August 2021 </p>
+                    <p>
+                        I was a Teaching Assistant for the Girls Who Code Summer Immersion Program. I supported the Instructor with logistical tasks and lesson delivery, and I also co-hosted student hours with another member of the teaching team to provide students with extra support outside of class. In the program, HTML/CSS and Javascript were the primary languages emphasized.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
 </body>
