Added folders and formatted CSS

--- a/pages/about.html
+++ b/pages/about.html
@@ -34,10 +34,12 @@
         <!-- Content -->
         <div class="about-item about-content">
 
-            <h2> About Me! </h2>
+            <h2> About Me </h2>
 
             <p> 
-                ...
+
+                Placeholder
+
             </p>
 
             <a class="button" href=""> Contact Information </a>
@@ -47,7 +49,9 @@
         <!-- Image -->
         <div class="about-item about-img">
 
-            <img src=""/>
+            <img src="./public/images/"/>
+
+            <img src="./public/images"
 
         </div>
 
