--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title> HOME | CAMELLIA GUAN </title>
 </head>
 
-<body>
+<body class="home-body">
     <nav>
 
         <div class="nav-heading">
@@ -54,7 +54,7 @@
         <!-- Image -->
         <div class="home-item home-img">
 
-            <img src="./public/images/home/home-image.png"/>
+            <img src="./public/images/home/home-image.jpg"/>
 
         </div>
 
