--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
     <title> ABOUT | CAMELLIA GUAN </title>
 </head>
 
-<body>
+<body class="about-body">
     <nav>
 
         <div class="nav-heading">
