--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -51,9 +51,11 @@
     
     <div class="portfolio-flex">
 
+        <h2 class="portfolio-header"> Projects </h2>
+
         <!-- Stack Specification and Implementation -->
         <div class="portfolio-item left">
-            <h2 class="portfolio-header"> Stack Specification and Implementation </h2>
+            <h2 class="portfolio-proj-header"> Stack Specification and Implementation </h2>
 
             <hr/> 
             
