Added preliminary about statement

--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,7 @@
 
             <p> 
 
-                Placeholder
+                I'm Camellia Guan, a student at Cornell University studying Computer Science.
 
             </p>
 
@@ -50,8 +50,6 @@
         <div class="about-item about-img">
 
             <img src="./public/images/"/>
-
-            <img src="./public/images"
 
         </div>
 
