Added css for about and modified index

--- a/index.html
+++ b/index.html
@@ -38,13 +38,18 @@
 
             <h2> Welcome! </h2>
 
-            <p> 
-                I"m very passionate about problem-solving, and I believe that computer science provides an incredible platform for tackling complex problems and making a positive impact on society. Throughout my time at Cornell, I have had the opportunity to work on various projects and engage in clubs and classes that have further fueled my passion for problem-solving. 
+            <p>
+                I'm Camellia Guan, a student at Cornell University studying Computer Science. Throughout my time here, I
+                have cultivated a wide skillset, including programming expertise, project planning, proactive and
+                efficient communication, and excellent time management.
 
-                <br/>
-                <br/>
+                <br />
+                <br />
 
-                Ultimately, I"d love to work in a role related to software development and engineering to create solutions to real-world problems and exercise my fundamentals in programming and problem-solving. 
+                As I will be graduating in the near future, I looking for an entry-level job or internship in software
+                and API development or front-end development. I am also interested in teaching programming
+                languages and their applications. I am currently a TA for AoPS’s Python courses and a Consultant for
+                Cornell’s Introduction to Computing in Python course.
             </p>
 
             <a class="button" href="./pages/about.html"> More About Me </a>
@@ -54,7 +59,7 @@
         <!-- Image -->
         <div class="home-item home-img">
 
-            <img src="./public/images/home/home-image.jpg"/>
+            <img src="./public/images/home/home-image.jpg" />
 
         </div>
 
