--- a/pages/about.html
+++ b/pages/about.html
@@ -36,18 +36,35 @@
 
             <h2> About Me </h2>
 
-            <p> 
-                I'm Camellia Guan, a student at Cornell University studying Computer Science.
-            </p>
+            <p>
+                I"m very passionate about problem-solving, and I believe that computer science provides an incredible
+                platform for tackling complex problems and making a positive impact on society. Throughout my time at
+                Cornell, I have had the opportunity to work on various projects and engage in clubs and classes that
+                have further fueled my passion for problem-solving.
 
-            <a class="button" href=""> Contact Information </a>
+                <br />
+                <br />
+
+                Ultimately, I"d love to work in a role related to software development and engineering to create
+                solutions to real-world problems and exercise my fundamentals in programming and problem-solving.
+
+                <br />
+                <br />
+
+                Besides programming and computer science, I have other passions, including creating art and trying new
+                things. During the past summer (2023), I went overseas for the first time and studied abroad in Hong
+                Kong, where I was able to adapt to an unfamiliar environment and experience a new culture.
+            </p>
 
         </div>
 
         <!-- Image -->
         <div class="about-item about-img">
 
-            <img src="./public/images/"/>
+            <div class="about-imgs">
+                <img src="../public/images/about/about-image.png" />
+                <img src="../public/images/about/about-image.png" />
+            </div>
 
         </div>
 
