--- a/pages/resume.html
+++ b/pages/resume.html
@@ -34,7 +34,7 @@
         <h2 class="resume-header"> Work Experience </h2>
 
         <div class="resume-download">
-            <a class="button center" href=""> Download Resume </a>
+            <a class="button center" target="_blank" href="../public/downloads/resume/camellia-guan-resume.pdf"> Download Resume </a>
         </div>
 
         <div class="resume-line">
