Added new images for about

--- a/pages/about.html
+++ b/pages/about.html
@@ -38,15 +38,15 @@
 
             <p>
                 I"m very passionate about problem-solving, and I believe that computer science provides an incredible
-                platform for tackling complex problems and making a positive impact on society. Throughout my time at
-                Cornell, I have had the opportunity to work on various projects and engage in clubs and classes that
-                have further fueled my passion for problem-solving.
+                platform for tackling complex problems and making a positive impact on society.
 
                 <br />
                 <br />
 
-                Ultimately, I"d love to work in a role related to software development and engineering to create
-                solutions to real-world problems and exercise my fundamentals in programming and problem-solving.
+                Throughout my time at Cornell, I have had the opportunity to work on various projects and engage in
+                clubs and classes that have further fueled my passion for problem-solving. Some things I am involved in
+                are the Society of Women Engineers at Cornell as the Communications Director, and CS 1110 as a
+                Consultant.
 
                 <br />
                 <br />
@@ -62,8 +62,8 @@
         <div class="about-item about-img">
 
             <div class="about-imgs">
-                <img src="../public/images/about/about-image.png" />
-                <img src="../public/images/about/about-image.png" />
+                <img src="../public/images/about/about-image-0.jpg" />
+                <img src="../public/images/about/about-image-1.jpg" />
             </div>
 
         </div>
