Made changes to resume (skills) and added css styling

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <!-- Content -->
         <div class="home-item home-content">
 
-            <h2> Welcome! </h2>
+            <h2> Hi! I'm Camellia Guan. </h2>
 
             <p>
-                I'm Camellia Guan, a student at Cornell University studying Computer Science. Throughout my time here, I
+                I'm a student at Cornell University studying Computer Science. Throughout my time here, I
                 have cultivated a wide skillset, including programming expertise, project planning, proactive and
                 efficient communication, and excellent time management.
 
