--- a/pages/about.html
+++ b/pages/about.html
@@ -69,4 +69,12 @@
         </div>
 
     </div>
+
+    <!-- Finish contact information section -->
+    <div class="contact-">
+
+        <h2> Contact Information </h2>
+
+    </div>
+
 </body>
