--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </p>
 
             <a class="button" href="./pages/about.html"> More About Me </a>
-            <a class="button" href="https://blinq.me/cfNk4d7DkVuL"> Contact </a>
+            <a class="button" target="_blank" href="https://blinq.me/cfNk4d7DkVuL"> Contact </a>
 
         </div>
 
