--- a/index.html
+++ b/index.html
@@ -39,17 +39,16 @@
             <h2> Hi! I'm Camellia Guan. </h2>
 
             <p>
-                I'm a student at Cornell University studying Computer Science. Throughout my time here, I
-                have cultivated a wide skillset, including programming expertise, project planning, proactive and
-                efficient communication, and excellent time management.
+                I recently graduated from Cornell University, where I majored in Computer Science and minored in Data 
+                Science and Psychology. Throughout my time there, I have cultivated a wide skillset, including programming 
+                expertise, project planning, proactive and efficient communication, and excellent time management.
 
                 <br />
                 <br />
 
-                As I will be graduating in the near future, I looking for an entry-level job or internship in software
-                and API development or front-end development. I am also interested in teaching programming
-                languages and their applications. I am currently a TA for AoPS’s Python courses and a Consultant for
-                Cornell’s Introduction to Computing in Python course.
+                I am interested in software and API development or front-end development (HTML/CSS/JS). I am also interested 
+                in teaching programming languages and their applications. I am currently a TA for AoPS’s Python courses and 
+                was a Consultant for Cornell’s Introduction to Computing in Python course.
             </p>
 
             <a class="button" href="./pages/about.html"> More About Me </a>
